src/components/HeroSection/HeroSection.module.scss
@use '../../sass/main.scss' as *;

.heroSection {
	width: 100vw;
	min-height: 91vh;

	@include flexbox;
	@include align-items(center);

	@include breakpoint('s') {
		@include flexbox(column);
		@include align-items(flex-start);
	}

	.imgWrapper {
		@include underlay(underlayedImg);
	}
	.hideMobile {
		display: none;
	}

	@include breakpoint('s') {
		min-height: auto;
	}
}

.heroLeft {
	width: 40%;
	height: 100%;
	margin-right: pxToRem(65px);
	@include flexbox(column);
	@include justify-content(center);

	.imgMobile {
		display: none;
	}

	.highlight {
		color: $text-highlight-color;
	}

	.heroLocation {
		max-width: pxToRem(397px);
	}

	// Spacing for left side
	.btnWrap {
		div {
			margin-right: pxToRem(10px);
		}
	}

	h1 {
		margin-top: pxToRem(37px);
		margin-bottom: pxToRem(12px);
	}

	button {
		margin-top: pxToRem(37px);
		margin-bottom: pxToRem(180px);
	}

	@include breakpoint('m') {
		button {
			margin-bottom: pxToRem(90px);
		}
	}
	
	@include breakpoint('s') {
		margin-top: 5rem;
		width: 100%;

		button {
			margin-bottom: pxToRem(40px);
		}

		.imgMobile {
			display: block;
			margin-bottom: pxToRem(57px);
		}
	}
}

.heroRight {
	width: 60%;
	height: 100%;
	@include flexbox(column);
	@include justify-content(center);

	.heroDetails {
		margin-top: pxToRem(152px);
		.detailsItem {
			@include flexbox;
			@include align-items(center);
			margin-bottom: pxToRem(12px);

			.phoneNumber {
				margin-left: 0.3rem;
				color: $text-light-color;
				border-bottom: 2px solid $text-light-color;
			}

			.logoContainer {
				color: $text-greygreen-color;
				width: pxToRem(50px);
				height: pxToRem(50px);
				border-radius: 50%;
				background-color: $text-light-color;
				margin-right: pxToRem(20px);
				@include flexbox;
				@include justify-content(center);
				@include align-items(center);

				img {
					width: 21px;
				}
			}
		}
	}

	@include breakpoint('s') {
		width: 100%;
		.heroDetails{
			margin-top: pxToRem(25.5px);
			margin-bottom: pxToRem(39px);
		}
	}
}

